[tool.poetry]
name = "pysonet"
version = "0.1.0"
description = "Social network by Django"
authors = ["ArturYefriemov <daria.mid@ukr.net>"]

[tool.poetry.dependencies]
python = "3.8.3"
Django = "^3.1.2"
djangorestframework = "^3.12.1"
Pillow = "^8.0.1"
psycopg2 = "^2.8.6"
djoser = "^2.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
